@@ -4,6 +4,9 @@ Ipe 7.2.29
 
  * Fix edges not always following when a node is moved (bug #487).
 
+ * Interpret strings in PDF documents that are in UTF-16 (ipepresenter
+   bug #11).
+
 ----------------------------------------------------------------------
 
 Ipe 7.2.28 (2023-08-13)
